# predict-my-future

./: .gitignore  API.md  PLAN.md  justfile
.firecrawl/: search-veo.json  veo-3.1-docs.md  veo-docs.md  veo-fast-model-search.json  veo-fast-search.json  veo-vertex-docs.md
.github/workflows/: deploy-server.yaml
.zed/: settings.json
app/PredictMyFuture/: ContentView.swift  PredictMyFutureApp.swift
app/PredictMyFuture.xcodeproj/: project.pbxproj
app/PredictMyFuture.xcodeproj/project.xcworkspace/xcuserdata/adenal-hardan.xcuserdatad/: UserInterfaceState.xcuserstate
app/PredictMyFuture.xcodeproj/xcuserdata/adenal-hardan.xcuserdatad/xcschemes/: xcschememanagement.plist
k8s/: server-deploy.yaml  server-ing.yaml  server-svc.yaml
server/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt  storage.py
server/.firecrawl/: veo-rate-limits.json
server/models/: schemas.py
server/routes/: predict.py
server/services/: client.py  prompt_generator.py  scene_analyzer.py  storage.py  video_generator.py
server/test_videos/: demo.html
