[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.135.1",
    "google-cloud-storage>=3.10.0",
    "google-genai>=1.0.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "Pillow>=10.0.0",
    "httpx>=0.27.0",
    "opencv-python-headless>=4.8.0",
]
